[tool.poetry]
name = "aoc"
version = "1.0.0"
description = "Utilities I use for advent of code."
authors = ["Nicholas Hansen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.9"
mypy = "^0.991"
flake8 = "^6.0.0"
isort = "^5.11.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 99

[tool.pylint.format]
max-line-length = "100"

[tool.pylint.'MESSAGES CONTROL']
disable="missing-module-docstring,missing-function-docstring,missing-class-docstring"
