[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc"
version = "1.0.0"
description = "Utilities I use for advent of code."
authors = [{ name = "Nicholas Hansen" }]
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["ruff>=0.7", "mypy>=1.13.0", "pytest>=8.0"]
