[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc"
version = "1.0.0"
description = "Utilities I use for advent of code."
authors = [{ name = "Nicholas Hansen" }]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "ruff>=0.7",
  "mypy>=1.13.0",
  "pytest>=8.0",
  "bpython>=0.24",
  "pytest-pudb>=0.7.0",
  "pytest-cov>=5.0",
  "regex>=24.9",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D", # Documentation - can't be fucked
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "PLR2004"]
